--- a/rocro.yml
+++ b/rocro.yml
@@ -6,5 +6,31 @@ inspecode:
   tools:
 
     clang-format:
-      auto-fix: true
+    - # auto-fix: true
       thresholds: {num-issues: 999}
+      ignore:
+        - 'builtin/'
+        - 'compat/'
+        - 't/'
+        - 'trace2/'
+        - 'xdiff/'
+    - # auto-fix: true
+      thresholds: {num-issues: 999}
+      input:
+        - 'builtin/'
+    - # auto-fix: true
+      thresholds: {num-issues: 999}
+      input:
+        - 'compat/'
+    - # auto-fix: true
+      thresholds: {num-issues: 999}
+      input:
+        - 't/'
+    - # auto-fix: true
+      thresholds: {num-issues: 999}
+      input:
+        - 'trace2/'
+    - # auto-fix: true
+      thresholds: {num-issues: 999}
+      input:
+        - 'xdiff/'
