--- a/rocro.yml
+++ b/rocro.yml
@@ -20,4 +20,4 @@ inspecode:
       input:
         - '**/*.js'
       options:
-        --fallback-style: none
+        --style: LLVM   # not-use file ".clang-format"
