cpplint: correct `--filter` option

--- a/rocro.yml
+++ b/rocro.yml
@@ -10,9 +10,9 @@ inspecode:
         --filter:
           - -whitespace
           - -build/include_subdir
-          - runtime/int
-          - readability/braces
-          - readability/casting
-          - legal/copyright
-          - build/header_guard
+          - -zruntime/int
+          - -readability/braces
+          - -readability/casting
+          - -legal/copyright
+          - -build/header_guard
       thresholds: {num-issues: 999}
