cpplint: typo-fix in rocro.yml

--- a/rocro.yml
+++ b/rocro.yml
@@ -10,7 +10,7 @@ inspecode:
         --filter:
           - -whitespace
           - -build/include_subdir
-          - -zruntime/int
+          - -runtime/int
           - -readability/braces
           - -readability/casting
           - -legal/copyright
