unused: increase machine resources (exp)

--- a/rocro.yml
+++ b/rocro.yml
@@ -6,7 +6,10 @@ inspecode:
   tools:
 
     unused:
+    - &unused-settings
       ignore:
         - '**/t/'
       options: [--single-occurrence, --all-likelihoods]
       thresholds: {num-issues: 999}
+    - <<: *unused-settings
+      machine: {cpu: 1.0}
